make sure #demo h2 color is readable

--- a/website/source/assets/stylesheets/_home.scss
+++ b/website/source/assets/stylesheets/_home.scss
@@ -216,7 +216,6 @@ body.page-home{
 
     h2 {
       font-size: 22px;
-      color: lighten($gray-light, 15%);
       text-transform: uppercase;
       font-family: $font-family-museo;
       font-weight: $font-weight-museo-xb;
